- Bugzilla Bug (s) Resolved:
- Description:
fixed some potential error in crosstab core code